--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,16 @@
-@import './common';
-@import './example';
+@import './base/reset';
+@import './base/variables';
+@import './base/common';
+@import './base/container';
+@import './base/placeholders';
+@import './base/visually-hidden';
+@import './layout/header';
+@import './layout/main';
+@import './layout/pagination';
+@import './layout/footer';
+@import './layout/header-lib';
+@import './layout/modal-window';
+@import './layout/footer-modal-window.scss';
+@import 'layout/loader';
+@import './layout/logo-colors';
+@import './layout/particles';
